--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">ImageDrawing</string>
-    <string name="color_picker">Color Picker</string>
+    <string name="app_name"></string>
 </resources>
